# pincushion

./: Cargo.toml  README.md  benchmark.txt  bump_version.py  changelog.md  copy_into_package.py  copy_into_unity.py  create_readme.py  readme_rs.md  readme_template.md
.github/actions/build-library/: action.yaml
.github/workflows/: build.yaml
PincushionCs/: PincushionCs.sln
PincushionCs/PincushionCs/: DynamicPoints.shader  MeshExtensions.cs  MonoBehaviour1.cs  Occluder.shader  Pincushion.shader  PincushionCreationMode.cs  PincushionCs.csproj  PincushionDynamicGenerator.cs  PincushionDynamicRenderer.cs  PincushionGenerator.cs  PincushionManager.cs  PincushionMesh.cs  PincushionMeshRenderer.cs  PincushionNativeBindings.cs  PincushionRenderMode.cs  PincushionRenderer.cs  PincushionSkinnedMeshRenderer.cs  PincushionStaticCreationMode.cs  PincushionStaticGenerator.cs  PincushionStaticRenderer.cs  PointsShaderStatic.shader  SampledPointsRenderer.cs  StaticPoints.shader  StaticPointsCreationMode.cs  StaticPointsRenderer.cs  StaticSampledPointsGenerator.cs
PincushionCs/PincushionCs/Properties/: AssemblyInfo.cs
PincushionCs/PincushionCs/Shaders/: Distance.shader  Pincushion.cginc  Pincushion.shader  PincushionDynamic.shader  PincushionReplacement.shader  PincushionStatic.shader  PincushionStructs.cginc
UnityExample/: .gitignore  Assembly-CSharp.csproj  UnityExample.sln  com.mit.pincushion.csproj
UnityExample/Assets/Pincushion/: CreationMode.cs  DynamicPoints.shader  MeshExtensions.cs  Occluder.shader  Pincushion.shader  PincushionCs.csproj  PincushionDynamicGenerator.cs  PincushionDynamicRenderer.cs  PincushionGenerator.cs  PincushionManager.cs  PincushionMeshRenderer.cs  PincushionNativeBindings.cs  PincushionOcclusionMode.cs  PincushionRenderer.cs  PincushionSampledMesh.cs  PincushionSkinnedMeshRenderer.cs  PincushionStaticGenerator.cs  PincushionStaticRenderer.cs  PincushionVisibilityToggler.cs  PointsShaderStatic.shader  SampledPoints.cs  SampledPointsRenderer.cs  StaticMaterial.mat  StaticPoints.shader  StaticPointsRenderer.cs  StaticSampledPointsGenerator.cs
UnityExample/Assets/Pincushion/Shaders/: Distance.shader  Pincushion.cginc  Pincushion.shader  PincushionDynamic.shader  PincushionReplacement.shader  PincushionStatic.shader  PincushionStructs.cginc
UnityExample/Assets/Scenes/: ApplyMask.cs  ApplyMask.unity  SampleScene.unity  ShowEveryNth.cs  ShowEveryNth.unity
UnityExample/ProjectSettings/: ProjectSettings.asset  TagManager.asset
com.mit.pincushion/: README.md  com.mit.pincushion.csproj  com.mit.pincushion.sln  package.json
com.mit.pincushion/Properties/: AssemblyInfo.cs
com.mit.pincushion/Runtime/: MeshExtensions.cs  PincushionManager.cs  PincushionMeshRenderer.cs  PincushionNativeBindings.cs  PincushionRenderMode.cs  PincushionRenderer.cs  PincushionSkinnedMeshRenderer.cs  com.mit.pincushion.asmdef  libpincushion.dylib
com.mit.pincushion/Runtime/Shaders/: Pincushion.cginc  Pincushion.shader  PincushionStructs.cginc
cs/: Pincushion.cs  PincushionNativeBindings.cs
doc/: benchmark.txt  create_readme.py  readme_rs.md  readme_rs_template.md  readme_template.md
examples/suzanne/src/: main.rs
pincushion/: Cargo.toml  README.md  overview.md
pincushion/benches/: bench.rs  benchmark.rs
pincushion/dev_code/: uvs.py
pincushion/doc/: README.md  header.md  unity.md
pincushion/examples/: readme.rs
pincushion/examples/suzanne/: Cargo.toml
pincushion/examples/suzanne/src/: main.rs
pincushion/src/: area.rs  cs.rs  ffi.rs  lib.rs  mask.rs  mesh.rs  nth.rs  quad.rs  quads.rs  sampler.rs  triangle.rs  vec3.rs  vecs.rs  vector3.rs  vertex.rs
pincushion/src/sampler/: mod.rs  point_sampler.rs  triangle_sampler.rs
pincushion/src/vecs/: color.rs  triangle.rs  uv.rs  vertex.rs
src/: cs.rs  ffi.rs  lib.rs  vector3.rs
