[package]
name = "pincushion"
version = "0.1.0"
edition = "2021"
authors = ["Esther Alter <alters@mit.edu>"]
description = "Given a target density, generate randomly sampled points on a mesh"

[dependencies]
mesh-rand = "0.1.0"
rand = "0.8.5"
safer-ffi = { version = "0.1.13", optional = true }

[lib]
crate-type = ["lib", "cdylib"]

[features]
safer-ffi = ["dep:safer-ffi"]
cs = ["safer-ffi/headers"]

[[bin]]
name = "cs"
required-features = ["cs"]
path = "bin/cs.rs"

[[example]]
name = "suzanne"
path = "examples/suzanne/src/main.rs"

[dev-dependencies]
macroquad = "0.4.13"
tobj = "4.0.0"