[package]
name = "pincushion"
version = "0.2.0"
edition = "2021"
authors = ["Esther Alter <alters@mit.edu>"]
description = "Uniformly sample points on a mesh. Includes FFI-safe functions for Unity/C# bindings."

[dependencies]
rand = "0.8.5"
safer-ffi = "0.1.13"
tobj = { version = "4.0.0", optional = true }

[dev-dependencies]
macroquad = "0.4.13"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["mask"]
mask = []
obj = ["dep:tobj"]
cs = ["safer-ffi/headers"]

[[bin]]
name = "cs"
path = "bin/cs.rs"
required-features = ["cs"]

[[example]]
name = "suzanne"
path = "examples/suzanne/src/main.rs"
required-features = ["obj"]

[[example]]
name = "readme"
path = "examples/readme.rs"
required-features = ["obj"]

[[bench]]
name = "benchmark"
harness = false
required-features = ["obj"]