[package]
name = "pincushion"
version = "0.2.2"
edition = "2021"
authors = ["Esther Alter <alters@mit.edu>"]
description = "Uniformly sample points on a mesh. Includes FFI-safe functions for Unity/C# bindings."

[dependencies]
fastrand = "2.3.0"
glam = "0.30.4
safer-ffi = { version = "0.1.13", optional = true }
tobj = { version = "4.0.3", optional = true }

[dev-dependencies]
macroquad = "0.4.14"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["ffi"]
ffi = ["dep:safer-ffi"]
obj = ["dep:tobj"]
cs = ["safer-ffi/headers"]

[[bin]]
name = "cs"
path = "bin/cs.rs"
required-features = ["cs"]

[[example]]
name = "suzanne"
path = "examples/suzanne/src/main.rs"
required-features = ["obj"]

[[example]]
name = "readme"
path = "examples/readme.rs"
required-features = ["obj"]

[[bench]]
name = "benchmark"
harness = false
required-features = ["obj"]
